optimisation of react components

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
     </head>
   </head>
-  <body class="bg-pan-left">
+  <body className="bg-pan-left">
     <div id="root"></div>
     
 
