--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,10 @@
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title >Say No To Sexism</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.8.0/css/bulma.min.css">
+    <link rel="stylesheet" href="../src/css/bulma.css">
+    <link rel="stylesheet" href="../src/css/bulma.min.css">
+    <link rel="stylesheet" href="../src/css/bulma.css.map">
+    <link rel="stylesheet" href="../src/css/bulma.css">
     <link rel="stylesheet" href="public/css/post.css">
     <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
     <head>
